@@ -75,6 +75,8 @@
 
   blend blend2
 
+  memcpy
+
   xxx
 
 );
