@@ -1,6 +1,7 @@
-/loading_color       0x23449c          newcolor
-% /fn_color            0x33449c          newcolor
+% /loading_color       0x23449c          newcolor
+/loading_color       0x128542          newcolor
 /fn_color            somegreen def
 /frame_color         0xd0d0ff          newcolor
 /dark_frame_color    0x364c65          newcolor
-/title.bg            0x317db4          newcolor
+% /title.bg            0x317db4          newcolor
+/title.bg            0x55963f          newcolor
