@@ -1,3 +1,7 @@
+16/3/2005:	v3.0.13
+	- speedup transparent menu drawing
+	- adjust some colors
+
 15/3/2005:	v3.0.12
 	- updated translations
 
